fixed issue with too large arrow button in backpacks

--- a/apps/chives-and-dill/src/app/guiContent/backpacks/Backpacks.module.scss
+++ b/apps/chives-and-dill/src/app/guiContent/backpacks/Backpacks.module.scss
@@ -43,11 +43,12 @@
 .expandBackpacksIcon {
    background-color: transparent;
    border: none;
-   transform: scale(1.6);
+   transform: scale(1.2);
    position: absolute;
-   right: 45px;
+   right: 50px;
    bottom: 30px;
    color: #dab744;
+   padding: 0;
 }
 
 .backpackContainer {
